feat: add JWT token + redis sessions
